--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         </releases>
     </repository>
 
+
     </repositories>
 
 <dependencies>
@@ -45,6 +46,13 @@
         <artifactId>httpclient</artifactId>
         <version>4.5.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20160810</version>
+    </dependency>
+
 
 </dependencies>
 
